--- a/00-generate-user-data.ipynb
+++ b/00-generate-user-data.ipynb
@@ -602,17 +602,17 @@
      "output_type": "stream",
      "text": [
       "first run\n",
-      "{'user_id': 1, 'user_name': ('Kaleb', 'Steinarson', 'male'), 'location': 'MS', 'DOB': numpy.datetime64('1939-05-04'), 'SSN': '1813365372', 'bank': '001', 'account': 1223334444}\n",
-      "(1, 1, ('Kaleb', 'Steinarson', 'male'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Fríðgerð', 'Oysteindóttir', 'female'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Eyði', 'Antinesson', 'male'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Broddur', 'Bjarnheðinson', 'male'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Jensia', 'Eyðsteindóttir', 'female'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Gunnbjørg', 'Hugindóttir', 'female'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Fríðrun', 'Jóanesdóttir', 'female'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Ápraham', 'Norðleivurson', 'male'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Heiðrún', 'Sólbjørndóttir', 'female'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n",
-      "(1, 1, ('Gunnar', 'Ríkinson', 'male'), 'MS', numpy.datetime64('1939-05-04'), '1813365372', '001', 1223334444)\n"
+      "{'user_id': 1, 'user_name': ('Natasja', 'Bergleivurdóttir', 'female'), 'location': 'SC', 'DOB': numpy.datetime64('1937-02-07'), 'SSN': '2549020093', 'bank': '001', 'account': 1223334444}\n",
+      "(1, 1, ('Natasja', 'Bergleivurdóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Kolgrímur', 'Valdison', 'male'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Marja', 'Kornusdóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Fríðbjørg', 'Brendandóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Jensia', 'Jensdóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Fríðborg', 'Hjørleivurdóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Gudný', 'Eyðtórdóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Klara', 'Bjartidóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Rósingur', 'Herbjarturson', 'male'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n",
+      "(1, 1, ('Miriam', 'Vinjardóttir', 'female'), 'SC', numpy.datetime64('1937-02-07'), '2549020093', '001', 1223334444)\n"
      ]
     }
    ],
